--- a/src/main/styles.css
+++ b/src/main/styles.css
@@ -22,29 +22,74 @@ p, h1, h2, h3, h4, h5, h6 {
   isolation: isolate;
 }
 
-body,
-html {
+button {
+  border: none;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #9147ff;
+}
+
+button:hover {
+  background-color: #732ddf;
+}
+
+body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  height: 100%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   background-color: #1f1f1f;
 }
 
 header {
-  background-color: #9147ff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #333;
   color: white;
-  padding: 5px;
+  padding: 10px;
+  min-height: 70px;
+}
+
+.header-left {
+  flex: 1;
+}
+
+header h1 {
+  margin: 0;
+  flex-grow: 1;
   text-align: center;
-  font-size: 20px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.username-container {
+  display: flex;
+  align-items: center;
+}
+
+.username-container input {
+  padding: 5px;
+  margin-right: 10px;
+  border: 2px solid #9147ff;
+  border-radius: 5px;
+  resize: none;
+  color: white;
+  background-color: #1f1f1f;
+}
+
+.username-container button {
+  padding: 5px 10px;
 }
 
 .container {
   display: flex;
   flex: 1;
-  height: calc(100% - 70px); /* Adjust according to header height */
+  height: 0;
 }
 
 .video-section {
@@ -61,11 +106,11 @@ header {
 }
 
 .chat-section {
-  flex: 1;
+  width: 400px;
   display: flex;
   flex-direction: column;
   border-left: 2px solid #9147ff;
-  max-width: 350px;
+  overflow-y: auto;
 }
 
 .chat-messages {
@@ -99,32 +144,47 @@ header {
 .chat-input button {
   margin-left: 10px;
   padding: 10px 15px;
-  border: none;
-  background-color: #9147ff;
-  color: white;
-  border-radius: 5px;
-  cursor: pointer;
 }
 
-.chat-input button:hover {
-  background-color: #732ddf;
+@media (max-width: 950px) {
+  header h1 {
+    flex: none;
+    text-align: center;
+    position: unset;
+    transform: none;
+  }
+
+  .header-left {
+    display: none;
+  }
 }
 
 @media (max-width: 610px) {
+
+  header {
+    flex-direction: column;
+  }
+
+  .username-container {
+    display: flex;
+    align-items: center;
+  }
+
   .container {
     flex-direction: column;
   }
+
   .video-section {
     flex: none;
   }
+
   .video-section::before {
     content: "";
     display: block;
     padding-top: 56.25%;
 }
   .chat-section {
-    max-width: none;
-    max-height: calc(100% - 70px);
+    width: auto;
     border-left: none;
     border-top: 2px solid #9147ff;
   }
