--- a/src/main/styles.css
+++ b/src/main/styles.css
@@ -35,10 +35,13 @@ button:hover {
 }
 
 body {
+  height: 100%;
+  height: 100vh;
+  height: 100dvh;
+
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
-  height: 100vh;
   display: flex;
   flex-direction: column;
   background-color: #1f1f1f;
@@ -52,6 +55,7 @@ header {
   color: white;
   padding: 10px;
   min-height: 70px;
+  border-bottom: 2px solid #9147ff;
 }
 
 .header-left {
@@ -107,6 +111,7 @@ header h1 {
 
 .chat-section {
   width: 400px;
+  min-height: 200px;
   display: flex;
   flex-direction: column;
   border-left: 2px solid #9147ff;
@@ -146,7 +151,11 @@ header h1 {
   padding: 10px 15px;
 }
 
-@media (max-width: 950px) {
+.toggle-chat {
+  margin-left: 10px;
+}
+
+@media (max-width: 1200px) {
   header h1 {
     flex: none;
     text-align: center;
@@ -158,17 +167,20 @@ header h1 {
   .header-left {
     display: none;
   }
+
+  .chat-section {
+    width: 320px;
+  }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 710px) {
 
   header {
     flex-direction: column;
   }
 
-  .username-container {
-    display: flex;
-    align-items: center;
+  .toggle-chat {
+    display: none;
   }
 
   .container {
@@ -183,8 +195,10 @@ header h1 {
     content: "";
     display: block;
     padding-top: 56.25%;
-}
+  }
+  
   .chat-section {
+    display: flex !important;
     width: auto;
     border-left: none;
     flex: 1;
