--- a/src/admin/styles.css
+++ b/src/admin/styles.css
@@ -1,115 +1,156 @@
-
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 * {
-    margin: 0;
+  margin: 0;
 }
 
 body {
-    background-color: #2c2c2c;
-    color: #ffffff;
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  background-color: #2c2c2c;
+  color: #ffffff;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 h1 {
-    color: #ffffff;
-    text-align: center;
-    padding-bottom: 20px;
+  color: #ffffff;
+  text-align: center;
+  padding-bottom: 20px;
 }
 
 ul {
-    list-style-type: none;
-    padding: 0;
+  list-style-type: none;
+  padding: 0;
 }
 
 li {
-    word-wrap: break-word;
-    width: 100%;
-    margin-bottom: 10px;
+  word-wrap: break-word;
+  width: 100%;
+  margin-bottom: 10px;
 }
 
 p {
-    margin-bottom: 2px;
-    word-break: break-all;
+  margin-bottom: 2px;
+  word-break: break-all;
+}
+
+button {
+  border: none;
+  color: white;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #9147ff;
+  min-height: 30px;
+}
+
+button:hover {
+  background-color: #732ddf;
 }
 
 .user {
-    color: #b98aff;
+  color: #b98aff;
 }
 
 .ip {
-    color: #00ff15;
+  color: #00ff15;
 }
 
 .time {
-    color: #ffffff;
+  color: #ffffff;
 }
 
 .main {
-    display: flex;
-    width: 100%;
-    height: calc(100vh - 116px);
+  display: flex;
+  width: 100%;
+  height: calc(100vh - 116px);
 }
 
 .container {
-    background-color: #313131;
-    padding: 10px;
-    border-radius: 5px;
+  background-color: #313131;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.left-container {
+  flex: 4;
+  display: flex;
+  flex-direction: column;
 }
 
 .time-container {
-    margin-top: 10px;
-    display: flex;
-    flex-direction: row;
+  margin-top: 10px;
+  display: flex;
+  flex-direction: row;
 }
 
 .flex-container {
-    background-color: #444444;
-    margin: 10px;
-    padding: 20px;
-    border-radius: 5px;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
+  background-color: #444444;
+  margin: 10px;
+  padding: 20px;
+  border-radius: 5px;
+  display: flex;
+  flex-direction: column;
+}
+
+.video-container {
+  display: none;
+  padding: 0;
+  position: relative;
+  overflow: hidden;
+}
+
+.video-section iframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+  position: absolute;
+}
+
+.video-section {
+  display: flex;
+}
+
+.video-section::before {
+  content: "";
+  display: block;
+  padding-top: 56.25%;
 }
 
 .connections-container {
-    flex: 4;
+  flex: 1;
 }
 
 .chat-container {
-    flex: 6;
+  flex: 6;
 }
 
 .chat-messages {
-    overflow-y: auto;
-    flex: 1;
+  overflow-y: auto;
+  flex: 1;
 }
 
-.status-container { 
-    margin-left: 10px;
-    display: flex;
+.status-container {
+  margin-left: 10px;
+  display: flex;
 }
 
 .dot {
-    margin-left: 3px;
-    height: 20px;
-    width: 20px;
-    border-radius: 50%;
-    display: inline-block;
+  margin-left: 3px;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  display: inline-block;
 }
 .red {
-    background-color: red;
+  background-color: red;
 }
 .green {
-    background-color: green;
+  background-color: green;
 }
