--- a/src/main/styles.css
+++ b/src/main/styles.css
@@ -1,4 +1,6 @@
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: border-box;
 }
 * {
@@ -8,17 +10,31 @@ body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
 }
-img, picture, video, canvas, svg {
+img,
+picture,
+video,
+canvas,
+svg {
   display: block;
   max-width: 100%;
 }
-input, button, textarea, select {
+input,
+button,
+textarea,
+select {
   font: inherit;
 }
-p, h1, h2, h3, h4, h5, h6 {
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   overflow-wrap: break-word;
 }
-#root, #__next {
+#root,
+#__next {
   isolation: isolate;
 }
 
@@ -101,6 +117,9 @@ header h1 {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-size: cover;
+  background-position: center;
+  background-image: url("../assets/banner.png");
 }
 
 .video-section iframe {
@@ -174,7 +193,6 @@ header h1 {
 }
 
 @media (max-width: 710px) {
-
   header {
     flex-direction: column;
   }
@@ -191,12 +209,12 @@ header h1 {
     flex: none;
   }
 
-  .video-section::before {
+  .player-section::before {
     content: "";
     display: block;
     padding-top: 56.25%;
   }
-  
+
   .chat-section {
     display: flex !important;
     width: auto;
